src/css/joomla-generic.css
/* ... */
body.h_trebuchetms h1, body.h_trebuchetms h2, body.h_trebuchetms h3, body.h_trebuchetms h4, body.h_trebuchetms h5, body.h_trebuchetms h6 {
  font-family: "Trebuchet MS",Tahoma,Arial,sans-serif; }

body.h_verdana h1, body.h_verdana h2, body.h_verdana h3, body.h_verdana h4, body.h_verdana h5, body.h_verdana h6 {
  font-family: Verdana,Tahoma,Geneva,sans-serif; }

/* General */
html {
  min-height: 100%;
  position: relative; }

img {
  max-width: 100%; }

/* Logos */
#logo a.image h2 {
  display: none; }

#logo img {
  width: 100%; }

a.joomlashack,
div.joomlashack {
  display: block;
  margin: 10px auto;
  text-align: center; }
  a.joomlashack img,
  div.joomlashack img {
    width: 75px;
    height: auto; }

/* Hidden text */
a:hover, a:active, a:focus {
  text-decoration: none; }

a.hidden-text span.hidden-text {
  display: none; }

/* Menus */
.nav li a .fas,
.nav li a .far,
.nav li a .fab,
.nav li a img,
.navbar-nav li a .fas,
.navbar-nav li a .far,
.navbar-nav li a .fab,
.navbar-nav li a img {
  margin-right: 4px; }

.menu > li > .submenu {
  margin-left: 0; }
  .menu > li > .submenu > li > .submenu > li > a {
    padding-left: 3rem; }
  .menu > li > .submenu > li > .submenu > li > .submenu > li > a {
    padding-left: 4.5rem; }
  .menu > li > .submenu > li > .submenu > li > .submenu > li > .submenu > li > a {
    padding-left: 6rem; }

.menu .submenu {
  list-style: none;
  padding: 0; }

.nav:not(.nav-pills):not(.nav-tabs) .active > a:not(.btn) {
  color: #005c41;
  background: #f8f9fa; }

.nav:not(.nav-pills):not(.nav-tabs) a:not(.btn) {
  color: #00A878; }
  .nav:not(.nav-pills):not(.nav-tabs) a:not(.btn):hover, .nav:not(.nav-pills):not(.nav-tabs) a:not(.btn):focus, .nav:not(.nav-pills):not(.nav-tabs) a:not(.btn):active {
    color: #005c41;
    background: #f8f9fa; }

.nav-pills .active > a {
  color: #fff;
  background: #00A878; }

.nav-pills a {
  color: #00A878; }
  .nav-pills a:hover, .nav-pills a:focus, .nav-pills a:active {
    color: #fff;
    background: #00A878; }

.nav-tabs .nav-item.active > a {
  color: #495057;
  background-color: #fff;
  border-color: #dee2e6 #dee2e6 #fff; }

.wrapper-bottom-menu {
  background: rgba(0, 0, 0, 0.5); }
  .wrapper-bottom-menu .navbar {
    padding-left: 0;
    padding-right: 0; }

/* Footer */
.wrapper-footer {
  width: 100%; }

#footer.sticky {
  width: 100%; }

/* Modules */
[class*="module"] {
  margin-bottom: 1.5rem;
  /*&:last-child {
        margin-bottom: 0;
    }*/ }

.card-body p:last-child,
.alert p:last-child {
  margin-bottom: 0; }

.jumbotron {
  font-weight: 300;
  border-radius: 0; }

/* Articles newsflash */
.mod-articlesnews .nav-item h1,
.mod-articlesnews .nav-item h2,
.mod-articlesnews .nav-item h3,
.mod-articlesnews .nav-item h4,
.mod-articlesnews .nav-item h5 {
  margin-bottom: 0; }

.mod-articlesnews .nav-item .nav-link:last-child:not(:first-child) {
  margin-bottom: 2rem; }

.mod-articlesnews .nav-item p:last-child {
  margin-bottom: 0; }

.mod-articlesnews .article-separator {
  display: block; }

/* Articles categories module */
.categories-module .nav-item h1,
.categories-module .nav-item h2,
.categories-module .nav-item h3,
.categories-module .nav-item h4,
.categories-module .nav-item h5,
.categories-module .nav-item h6 {
  margin-bottom: 0; }

.categories-module .nav-item .submenu > li a {
  padding-left: 2rem; }

.categories-module .nav-item .submenu > li .submenu > li a {
  padding-left: 3rem; }

.categories-module .nav-item .submenu > li .submenu > li .submenu > li a {
  padding-left: 4rem; }

.categories-module .nav-item .submenu > li .submenu > li .submenu > li .submenu > li a {
  padding-left: 5rem; }

.categories-module .submenu {
  list-style: none;
  padding: 0; }

/* Articles category module */
.category-module dl.article-info {
  margin-bottom: 0; }

.category-module .nav-item .nav-link:last-child:not(:first-child) {
  margin-bottom: 2rem; }

/* Articles */
p.img_caption {
  background: none repeat scroll 0 0 #e9ecef;
  font-size: 0.75em;
  font-style: italic;
  text-align: left; }

.readmore {
  /*overflow: hidden;

    .btn {
        max-width: calc(100% - 10px);
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
    }*/ }

.item-image {
  margin-top: 7px;
  margin-bottom: 1rem;
  max-width: 100%; }

dl.article-info {
  font-size: 0.8em;
  margin-bottom: 0.7rem; }
  dl.article-info > dt,
  dl.article-info > dd {
    display: inline-block;
    margin-right: 15px;
    margin-bottom: .2rem; }

.page-header {
  padding-bottom: 0.5rem;
  margin: 1.5rem 0 2rem;
  border-bottom: 1px solid #dee2e6; }
  .page-header h1,
  .page-header h2 {
    margin: 1rem 0; }

.item-title {
  margin: 1rem 0; }

/* Pagination */
.container-pagination .counter {
  line-height: 35px;
  margin: 0 !important; }

@media (max-width: 767px) {
  .container-pagination .pagination li.page-item:not(.pagination-start):not(.pagination-prev):not(.pagination-next):not(.pagination-end) {
    display: none !important; } }

/* Caption fixes */
.img_caption {
  text-align: center !important; }
  .img_caption .left {
    float: left;
    margin-right: 1em; }
  .img_caption .right {
    float: right;
    margin-left: 1em; }
  .img_caption .left p {
    clear: left;
    text-align: center; }
  .img_caption .right p {
    clear: right;
    text-align: center; }
  .img_caption.none {
    margin-left: auto;
    margin-right: auto;
    max-width: 100%; }

/* Archived articles */
#archive-items .intro {
  margin-bottom: 20px; }

@media (max-width: 575px) {
  .filter-search #month,
  .filter-search #year,
  .filter-search #limit {
    margin-bottom: 1rem; } }

/* Search */
span.highlight {
  background-color: #f9f952; }

/* Newsfeed */
.mod-newsfeed h5.feed-link {
  margin-bottom: 0; }

/* Form */
.invalid {
  color: #dc3545; }

label.invalid {
  font-weight: 700; }

.form-control-feedback {
  display: block;
  font-weight: 300;
  font-size: 0.8em; }
/* ... */

